@@ -1,3 +1,7 @@
+2004-11-17  Pascal Scheffers  <pascal@scheffers.net>
+
+	* tkchat.tcl: jabber: fix ~ in URL recognition regexp.
+
 2004-11-16  Pascal Scheffers  <pascal@scheffers.net>
 
 	* tkchat.tcl: jabber: add ~ to the URL recognition regexp.
